vlib/v/checker/tests/assign_mut.out
vlib/v/checker/tests/assign_mut.vv:3:9: error: `mut` not allowed with `=` (use `:=` to declare a variable)
    1 | fn main() {
    2 |     mut z := 1
    3 |     mut z = 1
      |         ^
    4 |     mut i := 2
    5 |     i, mut z = 2,3
vlib/v/checker/tests/assign_mut.vv:5:12: error: `mut` not allowed with `=` (use `:=` to declare a variable)
    3 |     mut z = 1
    4 |     mut i := 2
    5 |     i, mut z = 2,3
      |            ^
    6 | }
